docs/api/qiskit/0.43/qiskit.algorithms.optimizers.optimizer_utils.LearningRate.mdx
---
title: LearningRate
description: API reference for qiskit.algorithms.optimizers.optimizer_utils.LearningRate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.optimizers.optimizer_utils.LearningRate
---

# LearningRate

<Class id="qiskit.algorithms.optimizers.optimizer_utils.LearningRate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/optimizers/optimizer_utils/learning_rate.py" signature="LearningRate(learning_rate)">
  Bases: `Generator`

  Represents a Learning Rate. Will be an attribute of [`GradientDescentState`](qiskit.algorithms.optimizers.GradientDescentState "qiskit.algorithms.optimizers.GradientDescentState"). Note that [`GradientDescent`](qiskit.algorithms.optimizers.GradientDescent "qiskit.algorithms.optimizers.GradientDescent") also has a learning rate. That learning rate can be a float, a list, an array, a function returning a generator and will be used to create a generator to be used during the optimization process. This class wraps `Generator` so that we can also access the last yielded value.

  **Parameters**

  **learning\_rate** (*float | list\[float] | np.ndarray | Callable\[\[], Generator\[float, None, None]]*) – Used to create a generator to iterate on.

  ## Methods

  <span id="qiskit-algorithms-optimizers-optimizer-utils-learningrate-close" />

  ### close

  <Function id="qiskit.algorithms.optimizers.optimizer_utils.LearningRate.close" name="close" signature="LearningRate.close()">
    Raise GeneratorExit inside generator.
  </Function>

  <span id="qiskit-algorithms-optimizers-optimizer-utils-learningrate-send" />

  ### send

  <Function id="qiskit.algorithms.optimizers.optimizer_utils.LearningRate.send" name="send" signature="LearningRate.send(value)">
    Send a value into the generator. Return next yielded value or raise StopIteration.
  </Function>

  <span id="qiskit-algorithms-optimizers-optimizer-utils-learningrate-throw" />

  ### throw

  <Function id="qiskit.algorithms.optimizers.optimizer_utils.LearningRate.throw" name="throw" signature="LearningRate.throw(typ, val=None, tb=None)">
    Raise an exception in the generator. Return next yielded value or raise StopIteration.
  </Function>

  ## Attributes

  ### current

  <Attribute id="qiskit.algorithms.optimizers.optimizer_utils.LearningRate.current" name="current">
    Returns the current value of the learning rate.
  </Attribute>
</Class>

